* Show burning progress in the main window title so when you minimise the app you can see when it's finished.
* Apply patch #1329438 Fix exec layer in 64bit architecures
* Apply patch #1328641 Fix build on GNU/kFreeBSD
* Apply patch #1329831 Updated pt_BR translation
* Use valgrind to fix minor memory leaks.

Version 0.5.0

* We don't need libvorbis anymore as we use gstreamer to get tag info.
* Refactor all of the gstreamer code so it's easier to use.
* General code cleanup in the exec layer.
* Cleanup gstreamer plugin handling and improve error reporting.
* Generate inf files when we create audio cds.
* Fix Bug #1245753 Can't Minimize Burning CD/DVD Dialog.
* Fix Bug #1273910 0.4.2 > Xlib: unexpected async reply.
* Calculate iso sizes when creating datacds and burning existing isos so we can use dao and raw96 etc.
* Option to play sounds when burning is complete.
* Refactor the exec layer again so we use less threads and require less locking.
* Make the progress dialog more HIG compliant and improve feedback from all external applications.
* Make the prompt for disk insert more intelligent so it won't let you proceed until you insert one.
* Fix resource leaks in device eject and disk detection routines.
* Fix Bug #1295889 should recognize file extensions regardless of case (when burning cd/dvd images).
* Apply patch #1311145 Flickering window position restoring.
* Apply patch #1311058 audiocd.c and #1311024 'm3u capable' patch for audiocd.c. GB now imports m3u playlists.
* Apply patch #1313211 .m3u & .pls support - gnomebaker-0.4.2/src/audiocd.c. GB now imports pls playlists.
* Make all the columns resizeable in the disk tabs and filebrowser.
* Rework the start burning dialog so that it's clearer and more HIG like (I hope).
* Give the option of dummy burn and save iso for data dvds.

Version 0.4.2

* Apply patch #1260533 Save Maximized state from Marc Deslauriers
* Character set fix from Jean-François Wauthy