@@ -50,6 +50,8 @@
 #define GB_ONTHEFLY                 GB_BASE_KEY "/OnTheFly"
 #define GB_ASK_ON_QUIT				GB_BASE_KEY "/AskOnQuit"
 #define GB_PLAY_SOUND               GB_BASE_KEY "/PlaySound"
+#define GB_DATA_DISK_SIZE           GB_BASE_KEY "/DataDiskSize"
+#define GB_AUDIO_DISK_SIZE          GB_BASE_KEY "/AudioDiskSize"
 
 #define GB_MAIN_WINDOW_HEIGHT		GB_BASE_KEY "/UI/MainWindowHeight"
 #define GB_MAIN_WINDOW_WIDTH		GB_BASE_KEY "/UI/MainWindowWidth"
